--- a/www/manifest.json
+++ b/www/manifest.json
@@ -1,13 +1,23 @@
 {
-  "name": "Ionic",
-  "short_name": "Ionic",
+  "name": "ESN Mobility Fair 2017",
+  "short_name": "ESN Mobility Fair 2017",
   "start_url": "index.html",
   "display": "standalone",
   "icons": [{
-    "src": "assets/imgs/logo.png",
-    "sizes": "512x512",
+    "src": "assets/img/cropped-logo-cropped-270x270.png",
+    "sizes": "270x270",
+    "type": "image/png"
+  },
+  {
+    "src": "assets/img/cropped-logo-cropped-192x192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  },
+  {
+    "src": "assets/img/cropped-logo-cropped-180x180.png",
+    "sizes": "180x180",
     "type": "image/png"
   }],
-  "background_color": "#4e8ef7",
-  "theme_color": "#4e8ef7"
+  "background_color": "#222",
+  "theme_color": "#00aef0"
 }
